@@ -1,4 +1,4 @@
-# GETools v0.0.10
+# GETools
 Free animation tool for Autodesk Maya 2020+
 
 Here you can find different tools for specific cases, from simple tools for locator creation to complex tools for secondary animation generating and center of mass.
@@ -14,3 +14,4 @@ Simply drag and drop GETools\TOOLS\DRAG_AND_DROP_INSTALL.py into Maya viewport
 
 # Known issues:
 - Window redocking sometimes causes maya crash, rare bug
+
